--- a/gui/user_management/userManagementhome.ui
+++ b/gui/user_management/userManagementhome.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>608</height>
+    <width>750</width>
+    <height>588</height>
    </rect>
   </property>
   <property name="acceptDrops">
@@ -16,56 +16,17 @@
   <property name="windowTitle">
    <string>Components</string>
   </property>
-  <widget class="QPushButton" name="deleteUserBtn">
-   <property name="geometry">
-    <rect>
-     <x>410</x>
-     <y>260</y>
-     <width>75</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Delete User</string>
-   </property>
-  </widget>
   <widget class="QPushButton" name="addUserBtn">
    <property name="geometry">
     <rect>
-     <x>410</x>
-     <y>200</y>
+     <x>650</x>
+     <y>20</y>
      <width>75</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
-    <string>Add Users</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="showUsersBtn">
-   <property name="geometry">
-    <rect>
-     <x>290</x>
-     <y>200</y>
-     <width>75</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>View Users</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="updateUserBtn">
-   <property name="geometry">
-    <rect>
-     <x>290</x>
-     <y>260</y>
-     <width>75</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Update Users</string>
+    <string>Add User +</string>
    </property>
   </widget>
   <widget class="QPushButton" name="backBtn">
@@ -79,6 +40,16 @@
    </property>
    <property name="text">
     <string>Go Back</string>
+   </property>
+  </widget>
+  <widget class="QTableWidget" name="tableView">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>70</y>
+     <width>751</width>
+     <height>451</height>
+    </rect>
    </property>
   </widget>
  </widget>
