--- a/gui/calculation_engine.ui
+++ b/gui/calculation_engine.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>802</width>
+    <width>811</width>
     <height>600</height>
    </rect>
   </property>
@@ -32,18 +32,18 @@
   <widget class="QTableView" name="tableView">
    <property name="geometry">
     <rect>
-     <x>-5</x>
-     <y>41</y>
+     <x>0</x>
+     <y>40</y>
      <width>811</width>
-     <height>521</height>
+     <height>531</height>
     </rect>
    </property>
   </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>70</y>
+     <x>10</x>
+     <y>60</y>
      <width>111</width>
      <height>31</height>
     </rect>
@@ -55,8 +55,8 @@
   <widget class="QComboBox" name="componentBox">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>70</y>
+     <x>130</x>
+     <y>60</y>
      <width>151</width>
      <height>31</height>
     </rect>
@@ -65,8 +65,8 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>410</x>
-     <y>70</y>
+     <x>300</x>
+     <y>60</y>
      <width>51</width>
      <height>31</height>
     </rect>
@@ -78,8 +78,8 @@
   <widget class="QComboBox" name="typeComboBox">
    <property name="geometry">
     <rect>
-     <x>460</x>
-     <y>70</y>
+     <x>360</x>
+     <y>60</y>
      <width>151</width>
      <height>31</height>
     </rect>
@@ -88,9 +88,9 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>130</y>
-     <width>111</width>
+     <x>530</x>
+     <y>60</y>
+     <width>71</width>
      <height>31</height>
     </rect>
    </property>
@@ -101,8 +101,8 @@
   <widget class="QComboBox" name="refComboBox">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>130</y>
+     <x>610</x>
+     <y>60</y>
      <width>151</width>
      <height>31</height>
     </rect>
@@ -111,8 +111,8 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>400</x>
-     <y>130</y>
+     <x>10</x>
+     <y>110</y>
      <width>111</width>
      <height>31</height>
     </rect>
@@ -124,8 +124,8 @@
   <widget class="QComboBox" name="tempComboBox">
    <property name="geometry">
     <rect>
-     <x>520</x>
-     <y>130</y>
+     <x>120</x>
+     <y>110</y>
      <width>151</width>
      <height>31</height>
     </rect>
@@ -137,8 +137,8 @@
    </property>
    <property name="geometry">
     <rect>
-     <x>320</x>
-     <y>370</y>
+     <x>610</x>
+     <y>520</y>
      <width>181</width>
      <height>41</height>
     </rect>
@@ -159,8 +159,8 @@
   <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>200</y>
+     <x>40</x>
+     <y>344</y>
      <width>171</width>
      <height>16</height>
     </rect>
@@ -172,10 +172,10 @@
   <widget class="QLabel" name="refTemp">
    <property name="geometry">
     <rect>
-     <x>250</x>
-     <y>200</y>
+     <x>270</x>
+     <y>344</y>
      <width>60</width>
-     <height>16</height>
+     <height>21</height>
     </rect>
    </property>
    <property name="text">
@@ -185,23 +185,23 @@
   <widget class="QLabel" name="label_8">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>220</y>
-     <width>171</width>
+     <x>40</x>
+     <y>374</y>
+     <width>181</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string>Reference Failure Rate</string>
+    <string>Reference Failure Rate (λref)</string>
    </property>
   </widget>
   <widget class="QLabel" name="refFail">
    <property name="geometry">
     <rect>
-     <x>250</x>
-     <y>220</y>
+     <x>270</x>
+     <y>370</y>
      <width>60</width>
-     <height>16</height>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
@@ -211,10 +211,10 @@
   <widget class="QLabel" name="resultLab">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>330</y>
-     <width>91</width>
-     <height>16</height>
+     <x>40</x>
+     <y>470</y>
+     <width>71</width>
+     <height>21</height>
     </rect>
    </property>
    <property name="text">
@@ -224,10 +224,311 @@
   <widget class="QLabel" name="resultValue">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>330</y>
+     <x>140</x>
+     <y>470</y>
      <width>331</width>
-     <height>16</height>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="save_project">
+   <property name="geometry">
+    <rect>
+     <x>450</x>
+     <y>520</y>
+     <width>141</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Save As Project</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="export_result">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>520</y>
+     <width>161</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Export Result</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_7">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>410</y>
+     <width>61</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Formula</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="equation">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>410</y>
+     <width>321</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="equation_2">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>440</y>
+     <width>321</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="val_combo_1">
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>150</y>
+     <width>151</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="val_label1">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>150</y>
+     <width>211</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="val_combo_2">
+   <property name="geometry">
+    <rect>
+     <x>640</x>
+     <y>150</y>
+     <width>151</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="val_label2">
+   <property name="geometry">
+    <rect>
+     <x>440</x>
+     <y>150</y>
+     <width>191</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="val_label3">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>190</y>
+     <width>211</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="val_combo_3">
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>190</y>
+     <width>151</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="val_label4">
+   <property name="geometry">
+    <rect>
+     <x>440</x>
+     <y>190</y>
+     <width>191</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="val_combo_4">
+   <property name="geometry">
+    <rect>
+     <x>640</x>
+     <y>190</y>
+     <width>151</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="val_combo_5">
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>230</y>
+     <width>151</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="val_label5">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>230</y>
+     <width>211</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="val_combo_6">
+   <property name="geometry">
+    <rect>
+     <x>640</x>
+     <y>230</y>
+     <width>151</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="val_label6">
+   <property name="geometry">
+    <rect>
+     <x>440</x>
+     <y>230</y>
+     <width>191</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="val_combo_7">
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>270</y>
+     <width>151</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="val_label7">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>270</y>
+     <width>211</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="val_combo_8">
+   <property name="geometry">
+    <rect>
+     <x>640</x>
+     <y>270</y>
+     <width>151</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="val_label8">
+   <property name="geometry">
+    <rect>
+     <x>440</x>
+     <y>270</y>
+     <width>191</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="val_label_res_1">
+   <property name="geometry">
+    <rect>
+     <x>480</x>
+     <y>340</y>
+     <width>301</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="val_label_res_2">
+   <property name="geometry">
+    <rect>
+     <x>480</x>
+     <y>380</y>
+     <width>301</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="val_label_res_3">
+   <property name="geometry">
+    <rect>
+     <x>480</x>
+     <y>420</y>
+     <width>301</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="val_label_res_4">
+   <property name="geometry">
+    <rect>
+     <x>480</x>
+     <y>460</y>
+     <width>301</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
