--- a/gui/project/create_project.ui
+++ b/gui/project/create_project.ui
@@ -56,23 +56,13 @@
    <property name="geometry">
     <rect>
      <x>110</x>
-     <y>110</y>
+     <y>130</y>
      <width>131</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
     <string>Project Description</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="description">
-   <property name="geometry">
-    <rect>
-     <x>250</x>
-     <y>110</y>
-     <width>161</width>
-     <height>21</height>
-    </rect>
    </property>
   </widget>
   <widget class="QPushButton" name="submitBtn">
@@ -86,6 +76,16 @@
    </property>
    <property name="text">
     <string>Submit</string>
+   </property>
+  </widget>
+  <widget class="QPlainTextEdit" name="description">
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>120</y>
+     <width>161</width>
+     <height>41</height>
+    </rect>
    </property>
   </widget>
  </widget>
