--- a/gui/project/create_project.ui
+++ b/gui/project/create_project.ui
@@ -68,7 +68,7 @@
   <widget class="QPushButton" name="submitBtn">
    <property name="geometry">
     <rect>
-     <x>260</x>
+     <x>190</x>
      <y>220</y>
      <width>113</width>
      <height>32</height>
@@ -86,6 +86,19 @@
      <width>161</width>
      <height>41</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="submitBtn_2">
+   <property name="geometry">
+    <rect>
+     <x>360</x>
+     <y>220</y>
+     <width>171</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Calculate Failure Rate</string>
    </property>
   </widget>
  </widget>
