--- a/gui/login.ui
+++ b/gui/login.ui
@@ -20,13 +20,23 @@
    <number>1</number>
   </property>
   <widget class="QWidget" name="centralwidget">
+   <widget class="QTableWidget" name="tableWidget">
+    <property name="geometry">
+     <rect>
+      <x>180</x>
+      <y>50</y>
+      <width>431</width>
+      <height>321</height>
+     </rect>
+    </property>
+   </widget>
    <widget class="QPushButton" name="loginButton">
     <property name="geometry">
      <rect>
-      <x>290</x>
-      <y>240</y>
-      <width>75</width>
-      <height>23</height>
+      <x>260</x>
+      <y>230</y>
+      <width>91</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
@@ -36,20 +46,23 @@
    <widget class="QLineEdit" name="uemailID">
     <property name="geometry">
      <rect>
-      <x>220</x>
-      <y>160</y>
-      <width>181</width>
-      <height>20</height>
+      <x>330</x>
+      <y>109</y>
+      <width>211</width>
+      <height>31</height>
      </rect>
+    </property>
+    <property name="placeholderText">
+     <string>Enter User name</string>
     </property>
    </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>160</y>
-      <width>81</width>
-      <height>16</height>
+      <x>230</x>
+      <y>110</y>
+      <width>101</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -59,24 +72,40 @@
    <widget class="QLineEdit" name="uPassword">
     <property name="geometry">
      <rect>
-      <x>220</x>
-      <y>200</y>
-      <width>181</width>
-      <height>20</height>
+      <x>330</x>
+      <y>160</y>
+      <width>211</width>
+      <height>31</height>
      </rect>
+    </property>
+    <property name="placeholderText">
+     <string>Password</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>200</y>
-      <width>61</width>
-      <height>16</height>
+      <x>230</x>
+      <y>160</y>
+      <width>81</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
      <string>Password</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="registerButton">
+    <property name="geometry">
+     <rect>
+      <x>390</x>
+      <y>230</y>
+      <width>121</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Register</string>
     </property>
    </widget>
   </widget>
@@ -86,7 +115,7 @@
      <x>0</x>
      <y>0</y>
      <width>824</width>
-     <height>21</height>
+     <height>37</height>
     </rect>
    </property>
   </widget>
