--- a/gui/project/projects.ui
+++ b/gui/project/projects.ui
@@ -32,14 +32,14 @@
   <widget class="QPushButton" name="createProject">
    <property name="geometry">
     <rect>
-     <x>680</x>
+     <x>652</x>
      <y>0</y>
-     <width>113</width>
+     <width>141</width>
      <height>32</height>
     </rect>
    </property>
    <property name="text">
-    <string>Create Project</string>
+    <string>Create Project +</string>
    </property>
   </widget>
   <widget class="QTableWidget" name="tableView">
