--- a/template/pdf_export.html
+++ b/template/pdf_export.html
@@ -26,7 +26,7 @@
       </div>
     {%for key, item in details["values"].items()%}
       <div class="my-3 p-3 bg-body rounded shadow-sm">
-        <h6 class="border-bottom pb-2 mb-0">{{key}}</h6>
+<!--        <h6 class="border-bottom pb-2 mb-0">{{key}}</h6>-->
             {% for val in item %}
                 {% if val == "value"%}
                     <div class="d-flex text-body-secondary pt-3">
@@ -58,6 +58,22 @@
             {%endfor%}
         </div>
     {%endfor%}
+     <div class="my-3 p-3 bg-body rounded shadow-sm">
+        <h6 class="border-bottom pb-2 mb-0">Formula</h6>
+         <div class="d-flex text-body-secondary pt-3">
+          <p class="pb-3 mb-0 small lh-sm border-bottom">
+            <strong class="d-block text-gray-dark">{{equation}}</strong>
+          </p>
+        </div>
+     </div>
+    <div class="my-3 p-3 bg-body rounded shadow-sm">
+        <h6 class="border-bottom pb-2 mb-0">Result</h6>
+         <div class="d-flex text-body-secondary pt-3">
+          <p class="pb-3 mb-0 small lh-sm border-bottom">
+            <strong class="d-block text-gray-dark">{{result}}</strong>
+          </p>
+        </div>
+     </div>
 
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
