--- a/gui/project/projects.ui
+++ b/gui/project/projects.ui
@@ -16,19 +16,6 @@
   <property name="windowTitle">
    <string>Projects</string>
   </property>
-  <widget class="QPushButton" name="backBtn">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>0</y>
-     <width>113</width>
-     <height>32</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Go Back</string>
-   </property>
-  </widget>
   <widget class="QPushButton" name="createProject">
    <property name="geometry">
     <rect>
@@ -50,6 +37,29 @@
      <width>811</width>
      <height>521</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="homeBtn">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>0</y>
+     <width>81</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Home</string>
+   </property>
+   <property name="icon">
+    <iconset theme="../../static/icons/home.png">
+     <normaloff>.</normaloff>.</iconset>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>18</width>
+     <height>18</height>
+    </size>
    </property>
   </widget>
  </widget>
