--- a/gui/user_management/updateUser.ui
+++ b/gui/user_management/updateUser.ui
@@ -22,6 +22,16 @@
   <property name="inputMethodHints">
    <set>Qt::ImhNone</set>
   </property>
+  <widget class="QTableView" name="tableView">
+   <property name="geometry">
+    <rect>
+     <x>-465</x>
+     <y>60</y>
+     <width>1731</width>
+     <height>791</height>
+    </rect>
+   </property>
+  </widget>
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
@@ -39,9 +49,9 @@
    <property name="geometry">
     <rect>
      <x>230</x>
-     <y>180</y>
-     <width>113</width>
-     <height>20</height>
+     <y>169</y>
+     <width>161</width>
+     <height>31</height>
     </rect>
    </property>
   </widget>
@@ -75,19 +85,19 @@
    <property name="geometry">
     <rect>
      <x>230</x>
-     <y>260</y>
-     <width>113</width>
-     <height>20</height>
+     <y>249</y>
+     <width>161</width>
+     <height>31</height>
     </rect>
    </property>
   </widget>
   <widget class="QPushButton" name="updateUserButton">
    <property name="geometry">
     <rect>
-     <x>270</x>
+     <x>214</x>
      <y>350</y>
-     <width>75</width>
-     <height>23</height>
+     <width>131</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="text">
@@ -124,9 +134,9 @@
    <property name="geometry">
     <rect>
      <x>230</x>
-     <y>220</y>
-     <width>113</width>
-     <height>20</height>
+     <y>209</y>
+     <width>161</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="autoFillBackground">
@@ -143,9 +153,9 @@
    <property name="geometry">
     <rect>
      <x>230</x>
-     <y>300</y>
-     <width>111</width>
-     <height>22</height>
+     <y>291</y>
+     <width>161</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="toolTip">
